script src mistake fixed

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -5,6 +5,6 @@
     <title>Lab 2: JavaScript ES6</title>
 </head>
 <body>
-    <script src="js/script.js"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
