--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab 2: JavaScript ES6</title>
+    <title>Class Grade Book</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <script src="script/script.js"></script>
+    <h1>Class Grade Book</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Student Name</th>
+                <th>Course 1</th>
+                <th>Course 2</th>
+                <th>Course 3</th>
+                <th>Course 4</th>
+                <th>Avg. Number Grade</th>
+                <th>Avg. Letter Grade</th>
+            </tr>
+        </thead>
+        <tbody id="grade-book"></tbody>
+    </table>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
