fixed file path for script

--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class Grade Book</title>
-    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Class Grade Book</h1>
@@ -23,6 +22,6 @@
         <tbody id="grade-book"></tbody>
     </table>
 
-    <script src="js/script.js"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
