--- a/labs/lab4/index.html
+++ b/labs/lab4/index.html
@@ -4,29 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <style>
-        .error { color: red; }
-    </style>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <h2>Register</h2>
-    <form id="registerForm">
-        <label>Email: <input type="email" id="email" required></label>
-        <span id="emailError" class="error"></span>
-        <br>
-        <label>Username: <input type="text" id="username" required></label>
-        <span id="userError" class="error"></span>
-        <br>
-        <label>Password: <input type="password" id="password" required></label>
-        <span id="passError" class="error"></span>
-        <br>
-        <label>Confirm Password: <input type="password" id="confirmPassword" required></label>
-        <span id="confirmError" class="error"></span>
-        <br>
+    <form id="registration-form">
+        <label for="email">Email:</label>
+        <input type="email" id="email" required>
+        <span id="email-error"></span>
+
+        <label for="username">Username:</label>
+        <input type="text" id="username" required>
+        <span id="username-error"></span>
+
+        <label for="password">Password:</label>
+        <input type="password" id="password" required>
+        <span id="password-error"></span>
+
+        <label for="confirm-password">Confirm Password:</label>
+        <input type="password" id="confirm-password" required>
+        <span id="confirm-password-error"></span>
+
         <button type="submit">Register</button>
     </form>
-    <p id="successMessage" style="color:green;"></p>
-
-    <script src="script.js"></script>
+    <p>Already have an account? <a href="login.html">Login here</a></p>
+    <script src="scripts/registration.js"></script>
 </body>
 </html>
