--- a/labs/lab4/login.html
+++ b/labs/lab4/login.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <style>
-        .error { color: red; }
-    </style>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <h2>Login</h2>
-    <form id="loginForm">
-        <label>Username: <input type="text" id="loginUsername" required></label>
-        <span id="loginUserError" class="error"></span>
-        <br>
-        <label>Password: <input type="password" id="loginPassword" required></label>
-        <span id="loginPassError" class="error"></span>
-        <br>
+    <form id="login-form">
+        <label for="login-username">Username:</label>
+        <input type="text" id="login-username" required>
+        <span id="login-error"></span>
+
+        <label for="login-password">Password:</label>
+        <input type="password" id="login-password" required>
+        <span id="password-error"></span>
+
         <button type="submit">Login</button>
     </form>
-    <p id="loginMessage"></p>
-
-    <script src="script.js"></script>
+    <p>Don't have an account? <a href="index.html">Register here</a></p>
+    <script src="scripts/login.js"></script>
 </body>
 </html>
+
